UILayout Issue solved.

--- a/assets/styles/less/page/schedule.less
+++ b/assets/styles/less/page/schedule.less
@@ -1,9 +1,8 @@
-.page-schedule{
-    background:	#999;
-    height:		1000px;
-    margin:		0 auto;
-    width:		100%;
-    max-width:	900px;
-    min-width:	700px;
-
+.page-schedule{    
+    height: ~"calc(100vh - 89px)";
+    margin-top: -24px;
+    margin-bottom: -24px;
+    .pane{
+        display: none;
+    }
 }
